--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,148 +1,157 @@
-@import 'variables';
+@import "variables";
 
 .button {
-  display: inline-block;
-  background-color: $orange;
-  border-radius: 30px;
-  padding: 10px 20px;
-  min-width: 100px;
-  text-align: center;
-  cursor: pointer;
-  transition: background-color $duration ease-in-out, border-color $duration ease-in-out;
-  border: 1px solid transparent;
-  @include noselect();
+	display: inline-block;
+	background-color: $orange;
+	border-radius: 30px;
+	padding: 10px 20px;
 
-  &,
-  span {
-    color: #fff;
-  }
+	text-align: center;
+	cursor: pointer;
+	transition: background-color $duration ease-in-out, border-color $duration ease-in-out;
+	border: 1px solid transparent;
+	@include noselect();
 
-  i,
-  span,
-  path,
-  svg {
-    transition: all $duration ease-in-out;
-  }
+	&,
+	span {
+		color: #fff;
+	}
 
-  &:hover {
-    background-color: darken($orange, 8%);
-  }
+	i,
+	span,
+	path,
+	svg {
+		transition: all $duration ease-in-out;
+	}
 
-  &:active {
-    background-color: darken($orange, 12%);
-    transform: translateY(1px);
-  }
+	&:hover {
+		background-color: darken($orange, 8%);
+	}
 
-  &--circle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 32px;
-    height: 32px;
-    min-width: 32px;
-    padding: 0;
-    border-width: 2px;
-  }
+	&:active {
+		background-color: darken($orange, 12%);
+		transform: translateY(1px);
+	}
 
-  &--black {
-    background-color: $black;
+	&--circle {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 32px;
+		height: 32px;
+		min-width: 32px;
+		padding: 0;
+		border-width: 2px;
+	}
 
-    &:hover,
-    &:active {
-      background-color: lighten($color: $black, $amount: 10);
-    }
-  }
+	&--black {
+		background-color: $black;
 
-  &--outline {
-    background-color: #fff;
-    border-color: $orange;
-    &,
-    span {
-      color: $orange;
-    }
+		&:hover,
+		&:active {
+			background-color: lighten($color: $black, $amount: 10);
+		}
+	}
 
-    svg {
-      path {
-        fill: $orange;
-      }
-    }
+	&--outline {
+		background-color: #fff;
+		border-color: $orange;
+		&,
+		span {
+			color: $orange;
+		}
 
-    &:hover {
-      background-color: $orange;
+		svg {
+			path {
+				fill: $orange;
+			}
+		}
 
-      &,
-      span {
-        color: #fff;
-      }
+		&:hover {
+			background-color: $orange;
 
-      svg {
-        path {
-          fill: #fff;
-        }
-      }
-    }
+			&,
+			span {
+				color: #fff;
+			}
 
-    &:active {
-      background-color: darken($orange, 8%);
-    }
-  }
+			svg {
+				path {
+					fill: #fff;
+				}
+			}
+		}
 
-  &__delimiter {
-    width: 1px;
-    height: 25px;
-    background-color: rgba(255, 255, 255, 0.25);
-    margin-left: 14px;
-    margin-right: 14px;
-  }
+		&:active {
+			background-color: darken($orange, 8%);
+		}
+	}
 
-  &--add {
-    svg {
-      margin-right: 2px;
-    }
+	&__delimiter {
+		width: 1px;
+		height: 25px;
+		background-color: rgba(255, 255, 255, 0.25);
+		margin-left: 14px;
+		margin-right: 14px;
+	}
 
-    span {
-      font-weight: 600;
-      font-size: 16px;
-    }
+	&--add {
+		svg {
+			margin-right: 2px;
+		}
 
-    &:hover {
-      i {
-        background-color: #fff;
-        color: $orange;
-      }
-    }
+		span {
+			font-weight: 600;
+			font-size: 16px;
+		}
 
-    i {
-      display: inline-block;
-      border-radius: 30px;
-      background-color: $orange;
-      color: #fff;
-      font-weight: 600;
-      width: 22px;
-      height: 22px;
-      font-style: normal;
-      font-size: 13px;
-      line-height: 22px;
-      position: relative;
-      top: -1px;
-      left: 3px;
-    }
-  }
+		&:hover {
+			i {
+				background-color: #fff;
+				color: $orange;
+			}
+		}
 
-  &--cart {
-    display: flex;
-    align-items: center;
-    line-height: 23px;
-    padding: 12px 25px;
+		i {
+			display: inline-block;
+			border-radius: 30px;
+			background-color: $orange;
+			color: #fff;
+			font-weight: 600;
+			width: 22px;
+			height: 22px;
+			font-style: normal;
+			font-size: 13px;
+			line-height: 22px;
+			position: relative;
+			top: -1px;
+			left: 3px;
+		}
+	}
 
-    svg {
-      margin-right: 8px;
-      margin-bottom: 1px;
-    }
+	&--cart {
+		display: flex;
+		align-items: center;
+		line-height: 23px;
+		padding: 12px 25px;
 
-    span {
-      font-weight: 600;
-      font-size: 16px;
-    }
-  }
+		@media (max-width: 554px) {
+			padding: 8px 18px;
+		}
+
+		svg {
+			margin-right: 8px;
+			margin-bottom: 1px;
+		}
+
+		span {
+			font-weight: 600;
+			font-size: 16px;
+
+			@media (max-width: 554px) {
+				font-size: 14px;
+				font-weight: 400;
+			}
+		}
+	}
 }
