--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,41 +1,48 @@
-@import 'variables';
+@import "variables";
 
 .header {
-  border-bottom: 1px solid $gray-line;
-  padding: 40px 0;
+	border-bottom: 1px solid $gray-line;
+	padding: 40px 0 0 0;
 
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @media (max-width: 768px) {
-      flex-direction: column;
-    }
-  }
+	.container {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		@media (max-width: 768px) {
+			flex-direction: column;
+		}
+	}
 
-  @media (max-width: 768px) {
-    &__cart {
-      margin-top: 30px;
-    }
-  }
+	&__buttons {
+		display: flex;
+		align-items: center;
+		gap: 10px;
 
-  &__logo {
-    display: flex;
+		@media (max-width: 768px) {
+			margin-top: 30px;
+		}
+	}
 
-    img {
-      margin-right: 15px;
-    }
+	&__logo {
+		display: flex;
+		@media (min-width: 767px) {
+			margin-right: 20px;
+		}
 
-    h1 {
-      color: #181818;
-      font-size: 24px;
-      letter-spacing: 1%;
-      text-transform: uppercase;
-      font-weight: 800;
-    }
+		img {
+			margin-right: 15px;
+		}
 
-    p {
-      color: #7b7b7b;
-    }
-  }
+		h1 {
+			color: #181818;
+			font-size: 24px;
+			letter-spacing: 1%;
+			text-transform: uppercase;
+			font-weight: 800;
+		}
+
+		p {
+			color: #7b7b7b;
+		}
+	}
 }
